--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ daphne==3.0.1
 Django==3.1.5
 django-cors-headers==3.6.0
 djangorestframework==3.12.2
+gunicorn==20.0.4
 hyperlink==21.0.0
 idna==3.1
 incremental==17.5.0
@@ -25,4 +26,5 @@ service-identity==18.1.0
 six==1.15.0
 sqlparse==0.4.1
 txaio==20.12.1
+whitenoise==5.2.0
 zope.interface==5.2.0
