--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+aioredis==1.3.1
 asgiref==3.3.1
+async-timeout==3.0.1
 attrs==20.3.0
 autobahn==20.12.3
 Automat==20.2.0
 cffi==1.14.4
 channels==3.0.3
+channels-redis==3.2.0
 constantly==15.1.0
 cryptography==3.3.1
 daphne==3.0.1
@@ -11,9 +14,11 @@ Django==3.1.5
 django-cors-headers==3.6.0
 djangorestframework==3.12.2
 gunicorn==20.0.4
+hiredis==1.1.0
 hyperlink==21.0.0
 idna==3.1
 incremental==17.5.0
+msgpack==1.0.2
 Pillow==8.1.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
