--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,10 @@ channels-redis==3.2.0
 constantly==15.1.0
 cryptography==3.3.1
 daphne==3.0.1
+dj-database-url==0.5.0
 Django==3.1.5
 django-cors-headers==3.6.0
+django-heroku==0.3.1
 djangorestframework==3.12.2
 gunicorn==20.0.4
 hiredis==1.1.0
@@ -20,6 +22,7 @@ idna==3.1
 incremental==17.5.0
 msgpack==1.0.2
 Pillow==8.1.0
+psycopg2==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
@@ -30,6 +33,7 @@ pytz==2020.5
 service-identity==18.1.0
 six==1.15.0
 sqlparse==0.4.1
+Twisted @ file:///D:/Projects/TravBud_Backend/Twisted-20.3.0-cp39-cp39-win_amd64.whl
 txaio==20.12.1
 whitenoise==5.2.0
 zope.interface==5.2.0
